syntax = "proto3";

import "github.com/TheThingsNetwork/ttn/api/protocol/lorawan/lorawan.proto";

package protocol;

message RxMetadata {
  oneof protocol {
    lorawan.Metadata lorawan = 1;
  }
}

message TxConfiguration {
  oneof protocol {
    lorawan.TxConfiguration lorawan = 1;
  }
}

message ActivationMetadata {
  oneof protocol {
    lorawan.ActivationMetadata lorawan = 1;
  }
}

message Payload {
  bytes data = 1;
  oneof protocol {
    lorawan.PHYPayload lorawan = 2;
  }
}
